interface avaliacao criada

--- a/src/app/components/cadastro/cadastro.component.css
+++ b/src/app/components/cadastro/cadastro.component.css
@@ -78,4 +78,7 @@ p{
     color: #380ff1;
     padding: 20px;
   }
-  
+  .noop{
+    margin-left: 8px;
+    background-color: rgb(124, 163, 163);
+  }
