--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,6 +18,10 @@
             <i class="material-icons">support</i>
             Chamados
          </a>
+         <a mat-list-item routerLink="avaliacao">
+            <i class="material-icons">support</i>
+            Avaliação
+         </a>
         
          <a mat-list-item (click)="logout()">
             <i class="material-icons">logout</i>
