--- a/src/app/components/avaliacao/avaliacao-list/avaliacao-list.component.html
+++ b/src/app/components/avaliacao/avaliacao-list/avaliacao-list.component.html
@@ -1,1 +1,82 @@
-<p>avaliacao-list works!</p>
+<div class="container">
+
+    <h1 ><i><font face="Castellar">Avaliações</font></i></h1>   
+
+
+    <mat-form-field appearance="standard">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+      </mat-form-field>
+
+
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource">
+    
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="defeito">
+          <th mat-header-cell *matHeaderCellDef> Defeito </th>
+          <td mat-cell *matCellDef="let element"> {{element.defeito}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="qualidade">
+            <th mat-header-cell *matHeaderCellDef> Qualidade </th>
+            <td mat-cell *matCellDef="let element"> {{element.qualidade}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="melhora">
+            <th mat-header-cell *matHeaderCellDef> Melhora </th>
+            <td mat-cell *matCellDef="let element"> {{element.melhora}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="observacao">
+            <th mat-header-cell *matHeaderCellDef> Observação </th>
+            <td mat-cell *matCellDef="let element"> {{element.observacao}} </td>
+          </ng-container>
+    
+        <ng-container matColumnDef="motoboy">
+          <th mat-header-cell *matHeaderCellDef> Motoboy </th>
+          <td mat-cell *matCellDef="let element"> {{element.nomeMotoboy}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="estabelecimento">
+            <th mat-header-cell *matHeaderCellDef> Estabelecimento </th>
+            <td mat-cell *matCellDef="let element"> {{element.nomeEstabelecimento}} </td>
+          </ng-container>
+    
+        <ng-container matColumnDef="dataAbertura">
+          <th mat-header-cell *matHeaderCellDef> Data de Abertura </th>
+          <td mat-cell *matCellDef="let element"> {{element.dataAbertura}} </td>
+        </ng-container>
+
+  
+        <ng-container matColumnDef="acoes">
+          <th mat-header-cell *matHeaderCellDef> Ações </th>
+          <td mat-cell *matCellDef="let element"> 
+          <a routerLink="update/{{element.id}}">
+            <i class="material-icons edit">edit</i>
+          </a>  
+          <a routerLink="read/{{element.id}}">
+            <i class="material-icons delete">visibility</i>
+          </a>
+          </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                     showFirstLastButtons 
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+      
+    </div>
+   
+    </div>
+    <br>
+    <button  routerLink="create" mat-stroked-button color="black" class="mat-elevation-z10"><b>Novo Chamado</b></button>
