implementado avaliacao-update

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,13 +7,11 @@
     <img mat-card-image src="assets/img/home.svg" alt="Image HoemMotolivre">
     <mat-card-content>
         <p>
-            Olá! Seja bem vindo ao sistema Help Desk desenvolvido por mim no curso Desenvolvedor Full Stack.<br />
-            Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular 12 e
-            Spring Boot 2. <br />O sistema está rodando na nuvem sendo o front na Vercel e o back na Heroku.<br />
-            O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autorização com
-            Tokens JWT e muito mais. O código fonte do projeto pode ser acessado clicando no link Github no menu lateral.
+            Olá! Seja bem vindo ao Motolivre .<br />
+             <br />Temos como objetivo ajudar as pessoas que procura um serviço de entrega tanto para o motoboy quanto
+             para comercio, ainda em desenvolvimento pretendemos melhorar nossa interface para algo mais facil e elaborado.
             <br /><br /> Fique a vontade para testar o sistema e deixar sua sugestão.
-            <br /> At.te: Valdir cezar de Jesus
+            <br /> At.te: Alunos do 6 semestre.
            </p>
     </mat-card-content>
   </mat-card>
